feat(TUP-21546): Add commit mode on the studio (#2357)
* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

* feat(TUP-21546): Add commit mode on the studio

https://jira.talendforge.org/browse/TUP-21546

--- a/main/plugins/org.talend.themes.css.talend/themes/default/css/default.css
+++ b/main/plugins/org.talend.themes.css.talend/themes/default/css/default.css
@@ -639,6 +639,9 @@ CTabFolder.org-talend-rcp-abstractMultiPageEditor-footer CTabItem:selected {
 .SynonymIndexView Text{
     background-color: white;
 }
+.TalendStagingView StyledText {
+    background-color: COLOR-LIST-BACKGROUND;
+}
 
 /**************************************************
  * Palette
