fix(TESB-27788): Fix issue by packing takokit components along with the microservice jar. 1) Place takokit jars into /BOOT-INF/classpath/TALEND-INF/repository/<mvn path> directory 2) Place plugins description into /TALEND-INF/plugins.properties file. 3) Add maven https update. 4) Fix jackson versions.

--- a/main/plugins/org.talend.designer.maven/resources/templates/maven_user_settings.xml
+++ b/main/plugins/org.talend.designer.maven/resources/templates/maven_user_settings.xml
@@ -3,6 +3,15 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
 
+	<mirrors>
+		<mirror>
+			<id>official</id>
+			<name>repo.maven.apache.org</name>
+			<url>https://repo.maven.apache.org/maven2</url>
+			<mirrorOf>central</mirrorOf>
+		</mirror>
+	</mirrors>
+
 	<!-- localRepository | The path to the local repository maven will use to 
 		store artifacts. | | Default: ${user.home}/.m2/repository -->
 	<localRepository>${user.home}/.m2/repository</localRepository>
